libs/@local/hashql/ast/tests/ui/lowering/special-form-expander/use-literal.jsonc
//@ run: fail
//@ description: importing a literal should fail
[
  "::kernel::special_form::use",
  "::math",
  { "#literal": 1 },
  //~^ ERROR Replace with a valid import expression
  "x"
]
